--- a/jupyter/index.ipynb
+++ b/jupyter/index.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,14 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Picked up JAVA_TOOL_OPTIONS: -Xmx3330m -Xmx3435m\n",
+      "Picked up JAVA_TOOL_OPTIONS:  -Xmx3435m\n",
       "openjdk 17.0.3 2022-04-19\n",
       "OpenJDK Runtime Environment GraalVM CE 22.1.0 (build 17.0.3+7-jvmci-22.1-b06)\n",
       "OpenJDK 64-Bit Server VM GraalVM CE 22.1.0 (build 17.0.3+7-jvmci-22.1-b06, mixed mode, sharing)\n"
@@ -103,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Picked up JAVA_TOOL_OPTIONS: -Xmx3330m -Xmx3435m\n",
+      "Picked up JAVA_TOOL_OPTIONS:  -Xmx3435m\n",
       "2.9.1.Final\n"
      ]
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -148,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Picked up JAVA_TOOL_OPTIONS: -Xmx3330m -Xmx3435m\n",
+      "Picked up JAVA_TOOL_OPTIONS:  -Xmx3435m\n",
       "\u001b[90m\u001b[m\u001b[90m\u001b[m\u001b[90m\u001b[m\u001b[90m\u001b[m\u001b[90m\u001b[m\u001b[90m\u001b[m\u001b[90m\u001b[m\u001b[90m\u001b[m\u001b[90m\u001b[mFlyway Community Edition 8.5.11 by Redgate\n",
       "\n",
       "\u001b[90m\u001b[m\u001b[90m\u001b[m"
@@ -164,6 +164,23 @@
    ],
    "source": [
     "! flyway --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.8.13\n"
+     ]
+    }
+   ],
+   "source": [
+    "! python --version"
    ]
   },
   {
