--- a/jupyter/provisioning/02_aws-rosa.ipynb
+++ b/jupyter/provisioning/02_aws-rosa.ipynb
@@ -1,10 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "https://developers.redhat.com/developer-sandbox"
+    "# Red Hat ROSA"
    ]
   },
   {
