--- a/jupyter/provisioning/02_aws-rosa.ipynb
+++ b/jupyter/provisioning/02_aws-rosa.ipynb
@@ -11,6 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Disclaimer\n",
+    "\n",
+    "Before provisioning a cluster, or using any cloud computing service, consider the pricing and security implications.\n",
+    "https://aws.amazon.com/rosa/pricing/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Configure your AWS account authentication.\n",
     "If you don't have your AWS credentials, obtain them using the [AWS Identity and Management Console](https://console.aws.amazon.com/iamv2/home\n",
     ")\n",
@@ -86,6 +96,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Select a cluster name and create the cluster with default settings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -102,6 +119,25 @@
      ]
     }
    ],
+   "source": [
+    "cluster_name=\"rhnb-rosa\"\n",
+    "cluster_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! rosa create cluster --cluster-name={cluster_name}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
