--- a/jupyter/provisioning/02_aws-rosa.ipynb
+++ b/jupyter/provisioning/02_aws-rosa.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configure your AWS account authentication.\n",
+    "## Authenticate with AWS CLI\n",
     "If you don't have your AWS credentials, obtain them using the [AWS Identity and Management Console](https://console.aws.amazon.com/iamv2/home\n",
     ")\n",
     "```\n",
@@ -57,6 +57,52 @@
    ],
    "source": [
     "! aws sts get-caller-identity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Authenticate with ROSA CLI\n",
+    "\n",
+    "```\n",
+    "rosa login\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verify rosa authentication:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AWS Account ID:               269733383066\n",
+      "AWS Default Region:           ap-northeast-1\n",
+      "AWS ARN:                      arn:aws:iam::269733383066:user/jufaerma\n",
+      "OCM API:                      https://api.openshift.com\n",
+      "OCM Account ID:               1zXbM2cQHTP91cX7Wv8mK178ryp\n",
+      "OCM Account Name:             Julio Faerman\n",
+      "OCM Account Username:         faermanj\n",
+      "OCM Account Email:            jufaerma@redhat.com\n",
+      "OCM Organization ID:          1zXbLzxQMeUYrfYqtdpURL2t0Jq\n",
+      "OCM Organization Name:        RED HAT SL\n",
+      "OCM Organization External ID: 15341652\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "! rosa whoami "
    ]
   },
   {
@@ -107,16 +153,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3161078329.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [7]\u001b[0;36m\u001b[0m\n\u001b[0;31m    rosa whoami\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'rhnb-rosa'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -126,11 +174,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Creating cluster 'rhnb-rosa'\n",
+      "INFO: To view a list of clusters and their status, run 'rosa list clusters'\n",
+      "ERR: Failed to create cluster: Duplicate cluster name. There is already a cluster with the name 'rhnb-rosa' in the organization '1zXbLzxQMeUYrfYqtdpURL2t0Jq'\n"
+     ]
+    }
+   ],
+   "source": [
+    "! rosa create cluster --cluster-name={cluster_name} | tee .rosa_create_cluster.log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wait until cluster is created."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "installing\n"
+     ]
+    }
+   ],
+   "source": [
+    "! rosa describe cluster -c {cluster_name} -o json | jq -r \".status.state\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can watch the cluster being created with:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rosa logs install -c rhnb-rosa --watch\n"
+     ]
+    }
+   ],
+   "source": [
+    "! echo rosa logs install -c {cluster_name} --watch\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "! rosa create cluster --cluster-name={cluster_name}"
+    "## Cleanup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "After you're done, remember to delete the cluster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;36mI:\u001b[m Cluster 'rhnb-rosa' will start uninstalling now\n",
+      "\u001b[0;36mI:\u001b[m To watch your cluster uninstallation logs, run 'rosa logs uninstall -c rhnb-rosa --watch'\n"
+     ]
+    }
+   ],
+   "source": [
+    "! rosa delete cluster -c {cluster_name} -y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rosa logs uninstall -c rhnb-rosa --watch\n"
+     ]
+    }
+   ],
+   "source": [
+    "! echo rosa logs uninstall -c {cluster_name} --watch"
    ]
   },
   {
