--- a/jupyter/index.ipynb
+++ b/jupyter/index.ipynb
@@ -184,6 +184,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Environment variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the variables below in your environment or gitpod configuration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2775\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "!echo $PULL_SECRET | wc -c\n",
+    "!echo $OCP_BASE_DOMAIN | wc -c"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
